--- a/src/main/resources/fr/brunerie/projet/ihm/view/ajoutContact.fxml
+++ b/src/main/resources/fr/brunerie/projet/ihm/view/ajoutContact.fxml
@@ -8,13 +8,13 @@
 <BorderPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.brunerie.projet.application.ajoutContactController">
     <center>
         <VBox onKeyPressed="#validerFormulaire" alignment="CENTER" spacing="10">
-            <Text scaleX="2" scaleY="2" text="Nouveau Contact">
-                <VBox.margin>
-                    <Insets top="10.0" />
-                </VBox.margin>
-            </Text>
+            <Label scaleX="2" scaleY="2" text="Nouveau Contact">
+                <padding>
+                    <Insets bottom="25.0" />
+                </padding>
+            </Label>
             <HBox alignment="CENTER">
-                <GridPane alignment="CENTER" prefHeight="250.0" prefWidth="300.0" vgap="20" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+                <GridPane alignment="CENTER" prefHeight="250.0" prefWidth="300.0" vgap="20" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" hgap="10">
                     <Label text="Nom" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <TextField fx:id="nomContactField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
