--- a/src/main/resources/fr/brunerie/projet/ihm/view/edition.fxml
+++ b/src/main/resources/fr/brunerie/projet/ihm/view/edition.fxml
@@ -11,13 +11,13 @@
 <BorderPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.brunerie.projet.application.editionController">
     <center>
         <VBox onKeyPressed="#validerFormulaire" alignment="CENTER" spacing="10">
-            <Text scaleX="2" scaleY="2" text="Éditer Contact">
-                <VBox.margin>
-                    <Insets top="10.0" />
-                </VBox.margin>
-            </Text>
+            <Label scaleX="2" scaleY="2" text="Éditer Contact">
+                <padding>
+                    <Insets bottom="25.0" />
+                </padding>
+            </Label>
             <HBox alignment="CENTER">
-                <GridPane alignment="CENTER" prefHeight="250.0" prefWidth="300.0" vgap="20" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+                <GridPane alignment="CENTER" prefHeight="250.0" prefWidth="300.0" vgap="20" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" hgap="5">
                     <Label text="Nom" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <TextField fx:id="nomPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
@@ -30,7 +30,7 @@
                     <Label text="Email" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                     <TextField fx:id="emailPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                    <Label text="Téléphone" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                    <Label text="Téléphone" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
                     <TextField fx:id="telPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                 </GridPane>
             </HBox>
@@ -38,6 +38,9 @@
     </center>
     <bottom>
         <VBox alignment="CENTER">
+            <padding>
+                <Insets bottom="10.0" />
+            </padding>
             <Button fx:id="btnValider" onAction="#editerPersonne" text="Valider"/>
         </VBox>
     </bottom>
