--- a/src/main/resources/fr/brunerie/projet/ihm/view/edition.fxml
+++ b/src/main/resources/fr/brunerie/projet/ihm/view/edition.fxml
@@ -17,18 +17,18 @@
                 </padding>
             </Label>
             <HBox alignment="CENTER">
-                <GridPane alignment="CENTER" prefHeight="250.0" prefWidth="300.0" vgap="20" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" hgap="5">
+                <GridPane alignment="CENTER" prefHeight="250.0" prefWidth="300.0" vgap="20" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" hgap="10">
                     <Label text="Nom" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                    <TextField fx:id="nomPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <TextField fx:id="nomPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
                     <Label text="Prénom" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                    <TextField fx:id="prenomPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <TextField fx:id="prenomPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="1" promptText="Pierre..."/>
 
                     <Label text="Adresse" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                     <TextField fx:id="adressePersonneField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                     <Label text="Email" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                    <TextField fx:id="emailPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <TextField fx:id="emailPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
                     <Label text="Téléphone" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
                     <TextField fx:id="telPersonneField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
@@ -39,7 +39,7 @@
     <bottom>
         <VBox alignment="CENTER">
             <padding>
-                <Insets bottom="10.0" />
+                <Insets bottom="50.0" />
             </padding>
             <Button fx:id="btnValider" onAction="#editerPersonne" text="Valider"/>
         </VBox>
